--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>Goodlion</title>
     <script src="https://cdn.jsdelivr.net/gh/stevenschobert/instafeed.js/instafeed.min.js"></script>
-    <script src="./build/instalinks.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/tomatrow/instalinks/build/instalinks.min.js"></script>
 </head>
 
 <body>
